--- a/CA1/MainWindow.xaml
+++ b/CA1/MainWindow.xaml
@@ -1,20 +1,37 @@
-﻿<Window x:Class="CA1.MainWindow"
+﻿<Window x:Class="CA1._2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CA1"
+        xmlns:local="clr-namespace:CA1._2"
         mc:Ignorable="d"
         Loaded="Window_Loaded"
         Title="MainWindow" Height="350" Width="525">
-    <DockPanel Background="black">
-        <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" Margin="10" Background="AliceBlue">
-            <Button Name="btnAddRoom" Margin="10,2" Click="btnAddRoom_Click">Add _Room</Button>
-            <Label Name="lblOccupancy" Margin="10,0">% Occupancy</Label>
-            <TextBlock Name="tbkOccupancy" VerticalAlignment="Center" FontWeight="Bold">99%</TextBlock>
-            <Label Name="lblBeforeNoon" Margin="10,0">% Before Noon</Label>
-            <TextBlock Name="tbkBeforeNoon" VerticalAlignment="Center" FontWeight="Bold">9%</TextBlock>
-        </StackPanel>
-        <ListBox Name="lbxRooms" Margin="5" FontSize="14" Background="AliceBlue"></ListBox>
-    </DockPanel>
+    <Window.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="calibri"></Setter>
+            <Setter Property="FontSize" Value="16"></Setter>
+            <Setter Property="Margin" Value="10, 0"></Setter>
+            <Setter Property="Foreground" Value="Yellow"></Setter>
+        </Style>
+    </Window.Resources>
+    <Grid Background="CadetBlue">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="5*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <ListBox Name="lbxRooms" Margin="10" Background="Black" Foreground="Orange" FontFamily="calibri" FontSize="18" Grid.ColumnSpan="5"></ListBox>
+        <Button Name="btnAddRoom" Click="btnAddRoom_Click" Grid.Row="1" Margin="10" Background="Black" Foreground="Orange" FontFamily="calibri" FontSize="16">Add Room</Button>
+        <Label Margin="10,0" Foreground="Yellow" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" FontFamily="calibri" FontSize="16">% Occupancy</Label>
+        <TextBlock Name="tbkOccupancy" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center">99</TextBlock>
+        <Label Margin="10,0" Foreground="Yellow" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" FontFamily="calibri" FontSize="16">% Before Noon</Label>
+        <TextBlock Name="tbkBeforeNoon" Grid.Column="5" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center">9</TextBlock>
+    </Grid>
 </Window>
